# qwasar-nervous-system

./: .env.example  .gitignore  DEMO.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_DEMO.md  Makefile  NOTES.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  VERIFICATION_CHECKLIST.md  VERIFICATION_CHECKLIST_FINAL.md
build_notes/: session_1_rust_concepts.md
cpp/: CMakeLists.txt  CMakePresets.json
cpp/adapters/: CMakeLists.txt
cpp/adapters/include/: adapter.hpp  http_adapter.hpp  mqtt_adapter.hpp  zigbee_adapter.hpp  zwave_adapter.hpp
cpp/adapters/src/: http_adapter.cpp  mqtt_adapter.cpp  zigbee_adapter.cpp  zwave_adapter.cpp
cpp/processing/: BUILD.md  CMakeLists.txt  QUICK_REFERENCE.md  README.md
cpp/processing/config/: rules.json
cpp/processing/include/: amqp_publisher.hpp  processing_engine.hpp  processing_engine_impl.hpp  rabbitmq_publisher.hpp  rules_loader.hpp
cpp/processing/src/: amqp_publisher.cpp  main.cpp  processing_engine.cpp  rabbitmq_publisher.cpp
cpp/processing/tests/: test_processing_engine.cpp
docker/: docker-compose.yml
docs/: architecture.md  dependencies.md  flow.md  language-split.md  technologies.md
rust/: Cargo.toml
rust/common/: Cargo.toml
rust/common/src/: lib.rs
rust/demo-cli/: Cargo.toml
rust/demo-cli/src/: main.rs
rust/dispatcher/: Cargo.toml
rust/dispatcher/src/: main.rs
rust/mock-publisher/: Cargo.toml
rust/queue/: Cargo.toml
rust/queue/src/: main.rs
schema/: event.json
scripts/: start-demo.sh  start-services.sh
specs/: zigbee_pi_deployment.md
