[workspace]
members = [
    "common",
    "queue",
    "dispatcher",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lapin = "2"
futures-lite = "2"
thiserror = "1"
anyhow = "1"
