[workspace]
members = [
    "common",
    "queue",
    "dispatcher",
    "mock-publisher",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lapin = "2"
futures-lite = "2"
thiserror = "1"
anyhow = "1"
mongodb = "3"
reqwest = { version = "0.12", features = ["json"] }
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
dotenvy = "0.15"
