find_package(PahoMqttCpp REQUIRED)

find_path(RABBITMQ_INCLUDE_DIR amqp.h)
find_library(RABBITMQ_LIBRARY NAMES amqp rabbitmq rabbitmq-c librabbitmq)
if (RABBITMQ_INCLUDE_DIR AND RABBITMQ_LIBRARY)
    add_library(rabbitmq_c INTERFACE)
    target_include_directories(rabbitmq_c INTERFACE ${RABBITMQ_INCLUDE_DIR})
    target_link_libraries(rabbitmq_c INTERFACE ${RABBITMQ_LIBRARY})
    set(RABBITMQ_C_FOUND TRUE)
endif()

add_library(adapters INTERFACE)

target_include_directories(adapters INTERFACE include)
target_link_libraries(adapters INTERFACE nlohmann_json::nlohmann_json)

add_library(mqtt_adapter STATIC src/mqtt_adapter.cpp)
target_include_directories(mqtt_adapter PUBLIC include)
target_link_libraries(mqtt_adapter PUBLIC adapters PahoMqttCpp::PahoMqttCpp)
if (RABBITMQ_C_FOUND)
    target_link_libraries(mqtt_adapter PRIVATE rabbitmq_c)
    target_compile_definitions(mqtt_adapter PRIVATE HAS_RABBITMQ_C=1)
endif()

add_library(zigbee_adapter STATIC src/zigbee_adapter.cpp)
target_include_directories(zigbee_adapter PUBLIC include)
target_link_libraries(zigbee_adapter PUBLIC adapters)
if (RABBITMQ_C_FOUND)
    target_link_libraries(zigbee_adapter PRIVATE rabbitmq_c)
    target_compile_definitions(zigbee_adapter PRIVATE HAS_RABBITMQ_C=1)
endif()

add_library(http_adapter STATIC src/http_adapter.cpp)
target_include_directories(http_adapter PUBLIC include)
target_link_libraries(http_adapter PUBLIC adapters httplib)
if (RABBITMQ_C_FOUND)
    target_link_libraries(http_adapter PRIVATE rabbitmq_c)
    target_compile_definitions(http_adapter PRIVATE HAS_RABBITMQ_C=1)
endif()

add_library(zwave_adapter STATIC src/zwave_adapter.cpp)
target_include_directories(zwave_adapter PUBLIC include)
target_link_libraries(zwave_adapter PUBLIC adapters)
if (RABBITMQ_C_FOUND)
    target_link_libraries(zwave_adapter PRIVATE rabbitmq_c)
    target_compile_definitions(zwave_adapter PRIVATE HAS_RABBITMQ_C=1)
endif()
