[package]
name = "nervous-system-mock-publisher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mock-device"
path = "src/bin/mock_device.rs"

[[bin]]
name = "mock-alarm"
path = "src/bin/mock_alarm.rs"

[dependencies]
nervous-system-common = { path = "../common" }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lapin = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
