[package]
name = "nervous-system-queue"
version = "0.1.0"
edition = "2021"

[dependencies]
nervous-system-common = { path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lapin = { workspace = true }
futures-lite = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
